<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/district"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/district"
            android:textColor="@color/black"
            android:textSize="@dimen/unit_24_text" />
        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/block"
        android:text="@string/block"
        android:textColor="@color/black"
        android:textSize="@dimen/unit_24_text"
        android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/tank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/tank"
            android:textColor="@color/black"
            android:textSize="@dimen/unit_24_text" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="@dimen/unit_24_text" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/second_recycler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />
</LinearLayout>