<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:background="@color/white"
      
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/driver_number"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="8dp"
                android:visibility="gone"
                android:id="@+id/driver_number"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:id="@+id/driver_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/unit_24"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/truck_number"/>

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:id="@+id/truck_number"/>
            <TextView
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/truck_name"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:textSize="24sp"
            android:padding="8dp"
            android:textStyle="bold"
            android:id="@+id/checkbox"
            android:textColor="@color/black"
            android:text="@string/empty_truck_exit"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/unit_24"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:inputType="number"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@color/black"
                android:text="@string/voucher_number"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:inputType="number"
                android:padding="8dp"
                android:id="@+id/voucher_number"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:textSize="24sp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:id="@+id/entry_time"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/unit_24"
            android:textSize="24sp"
            android:padding="8dp"
            android:layout_height="2dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:text="@string/weight_on_leave"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:id="@+id/weight"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="8dp"
                android:text="@string/meter"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:inputType="number"
                android:padding="8dp"
                android:text="@string/voucher_number_exit"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="8dp"
                android:inputType="number"
                android:id="@+id/exit_voucher_number"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="@color/black"
            android:text="@string/cause_of_leave"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:padding="24dp"
            android:layout_margin="24dp"
            android:id="@+id/spinner"
            android:textColor="@color/white"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:id="@+id/voucher_linear"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:textStyle="bold"
                android:id="@+id/exit_name_display"
                android:textColor="@color/black"
                android:text="@string/voucher_akaider"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="8dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:id="@+id/exit_name"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/unit_24"
            android:id="@+id/exit_time"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            android:padding="8dp"
            android:layout_marginBottom="@dimen/unit_24"
            android:lines="3"
            android:maxLines="3"
            android:minLines="3"
            android:inputType="textMultiLine"
            android:hint="@string/comments"
            android:id="@+id/comment"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/unit_24"
            android:padding="@dimen/unit_12"
            android:id="@+id/save"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</ScrollView>