<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/unit_24"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:padding="8dp"
                android:text="@string/driver_number"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:inputType="number"
                android:id="@+id/driver_number"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:padding="8dp"

                android:textColor="@color/black"
                android:id="@+id/driver_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:padding="8dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/truck_number"/>

            <Spinner
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:id="@+id/truck_number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:padding="8dp"
                android:id="@+id/truck_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="30sp"
                android:padding="8dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/weight_on_leave"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="@color/black"
                android:id="@+id/weight"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:text="@string/meter"
                android:padding="8dp"
                android:id="@+id/meter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="number"
                android:padding="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/voucher_number"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:padding="8dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:id="@+id/voucher_number"/>
        </LinearLayout>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:padding="24dp"
            android:layout_margin="24dp"
            android:id="@+id/spinner"
            android:textColor="@color/white"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit_24"
            android:textSize="30sp"
            android:padding="8dp"
            android:textColor="@color/dark_grey"
            android:id="@+id/entry_time"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginBottom="@dimen/unit_24"
            android:lines="3"
            android:maxLines="3"
            android:minLines="3"
            android:inputType="textMultiLine"
            android:hint="@string/comments"
            android:textSize="30sp"
            android:padding="8dp"
            android:id="@+id/comment"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"   android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/unit_24"
            android:gravity="center"
            android:textSize="30sp"
            android:padding="@dimen/unit_12"
            android:id="@+id/save"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</ScrollView>