<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="64dp"
            android:src="@drawable/sync"
            android:id="@+id/rotate"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/unit_12"
            android:background="@color/colorPrimary"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/pip"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/unit_32"
                android:text="@string/login_screen"
                android:textColor="@color/white"
                android:textSize="@dimen/unit_28_text"
                android:textStyle="bold" />
            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/unit_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/unit_32">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/unit_8"
                    android:text="@string/input_user_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/unit_24_text" />

                <EditText
                    android:id="@+id/user_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/unit_24_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/unit_32">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/unit_8"
                    android:text="@string/enter_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/unit_24_text" />

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/unit_24_text" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"
                android:paddingTop="@dimen/unit_32"
                android:paddingBottom="@dimen/unit_32"
                android:paddingRight="@dimen/unit_8"
                android:paddingLeft="@dimen/unit_8"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/unit_28_text"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progressBar"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_gravity="center"
        android:theme="@style/RevealTheme"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>