<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"

        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/truck"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/truck"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/driver"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="اسم السائق"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/up_enter"
                android:src="@drawable/arrow_up_grey"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/down_enter"
                android:src="@drawable/arrow_down_grey"/>
        </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/up_exit"
                android:src="@drawable/arrow_up_grey"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/down_exit"
                android:src="@drawable/arrow_down_grey"/>
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingBottom="@dimen/unit_6"
        android:paddingTop="@dimen/unit_6"
        android:background="@color/black" />
</LinearLayout>